--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -136,10 +136,10 @@
       <div class="header-right">
         <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
           <ul class="menu">
-            <li><a href="/index.html" class="nav-link">Home</a></li>
-            <li><a href="/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="/products.html" class="nav-link">Products</a></li>
-            <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+            <li><a href="https://www.baumechemical.com/products.html" class="nav-link">Products</a></li>
+            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
           </ul>
         </nav>
 
